--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     build: .
     image: htdise:latest
     restart: "no"
-    command: /usr/local/bin/test -n 5 -mc 4 -t 5
-    scale: 5
+    command: /usr/local/bin/test -n 25 -mf .7 -t 8192
+    deploy:
+      replicas: 25
     build: .
     networks:
       dise-net:
