--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     build: .
     image: htdise:latest
     restart: "no"
-    command: /usr/local/bin/test -n 25 -mf .7 -t 8192
+    command: /usr/local/bin/test -n "${NODE_COUNT:-10}" -mf "${THRESHOLD_FRACTION:-0.7}" -t "${TRIAL_SIZE:-4096}"
     deploy:
-      replicas: 25
+      replicas: "${NODE_COUNT:-10}"
     build: .
     networks:
       dise-net:
