--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,22 @@
 version: '2'
 
 services:
-  node:
+  client:
     build: .
-    image: gabrielkulp/htdise:latest
+    image: gabrielkulp/htdise
     restart: "no"
-    command: /usr/local/bin/test -n "${NODE_COUNT:-10}" -mf "${THRESHOLD_FRACTION:-0.7}" -t "${TRIAL_SIZE:-4096}"
-    deploy:
-      replicas: "${NODE_COUNT:-10}"
+    command: /usr/local/bin/test -n "${SERVER_COUNT:-9}" -mf "${THRESHOLD_FRACTION:-0.7}" -t "${TRIAL_SIZE:-4096}" -client
+    networks:
+      dise-net:
+        ipv4_address: 10.0.0.2
+
+  server:
     build: .
+    image: gabrielkulp/htdise
+    restart: "no"
+    command: /usr/local/bin/test -n "${SERVER_COUNT:-9}"
+    deploy:
+      replicas: "${SERVER_COUNT:-9}"
     networks:
       dise-net:
 
