--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   client:
     build: .
     image: gabrielkulp/htdise:latest
-    restart: "no"
-    command: ./bin/entry.sh -n "${SERVER_COUNT:-9}" -mf "${THRESHOLD_FRACTION:-0.7}" -t "${TRIAL_SIZE:-4096}" -client
-    volumes:
-      - ./schedule.log:/usr/local/schedule.log
+    command: bin/test -n "${SERVER_COUNT:-9}" -mf "${THRESHOLD_FRACTION:-0.7}" -t "${TRIAL_SIZE:-4096}" -client
+    depends_on:
+      - uptime
+      - server
     networks:
       dise-net:
         ipv4_address: 10.0.0.2
@@ -15,14 +15,21 @@ services:
   server:
     build: .
     image: gabrielkulp/htdise:latest
-    restart: "no"
-    command: ./bin/restart.py "${SERVER_COUNT:-9}" "${THRESHOLD_FRACTION:-0.7}" 60 30
-    volumes:
-      - ${PWD}/schedule.log:/usr/local/schedule.log
+    command: bin/restart.py "${SERVER_COUNT:-9}" "${THRESHOLD_FRACTION:-0.7}" 60 30
+    depends_on:
+      - uptime
     deploy:
       replicas: "${SERVER_COUNT:-9}"
     networks:
       dise-net:
+
+  uptime:
+    build: .
+    image: gabrielkulp/htdise:latest
+    command: bin/uptime_server.py "${SERVER_COUNT:-9}" 
+    networks:
+      dise-net:
+        ipv4_address: 10.0.0.254
 
 networks:
   dise-net:
