--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cryptoTools"]
 	path = cryptoTools
-	url = git@github.com:gabrielkulp/cryptoTools.git
+	url = https://github.com/ladnir/cryptoTools.git
